footer alignment error fixed

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -225,8 +225,9 @@ body{
 .footer{
   background-color: rgb(28, 28, 28);
   height:25rem;
-  padding-top: 5rem;
+  padding-top: 2rem;
   padding-left: 2%;
+  margin-bottom: 1rem;
 }
 
 /* social media icons*/
